--- a/changes/32.3.0.md
+++ b/changes/32.3.0.md
@@ -1,3 +1,113 @@
+* Make certain M-width characters slightly wider under Quasi-Proportional. Affected characters:
+  - LATIN CAPITAL LETTER W (`U+0057`).
+  - LATIN SMALL LETTER M (`U+006D`).
+  - LATIN SMALL LETTER W (`U+0077`).
+  - LATIN CAPITAL LETTER AE (`U+00C6`).
+  - LATIN SMALL LETTER AE (`U+00E6`).
+  - LATIN CAPITAL LIGATURE OE (`U+0152`) ... LATIN SMALL LIGATURE OE (`U+0153`).
+  - LATIN CAPITAL LETTER W WITH CIRCUMFLEX (`U+0174`) ... LATIN SMALL LETTER W WITH CIRCUMFLEX (`U+0175`).
+  - LATIN SMALL LETTER HV (`U+0195`).
+  - LATIN CAPITAL LETTER TURNED M (`U+019C`).
+  - LATIN CAPITAL LETTER GHA (`U+01A2`) ... LATIN SMALL LETTER GHA (`U+01A3`).
+  - LATIN CAPITAL LETTER AE WITH MACRON (`U+01E2`) ... LATIN SMALL LETTER AE WITH MACRON (`U+01E3`).
+  - LATIN CAPITAL LETTER HWAIR (`U+01F6`).
+  - LATIN CAPITAL LETTER AE WITH ACUTE (`U+01FC`) ... LATIN SMALL LETTER AE WITH ACUTE (`U+01FD`).
+  - LATIN SMALL LETTER DB DIGRAPH (`U+0238`) ... LATIN SMALL LETTER QP DIGRAPH (`U+0239`).
+  - LATIN SMALL LETTER TURNED M (`U+026F`) ... LATIN SMALL LETTER M WITH HOOK (`U+0271`).
+  - LATIN SMALL LETTER CLOSED OMEGA (`U+0277`).
+  - LATIN SMALL LETTER TURNED W (`U+028D`).
+  - LATIN SMALL LETTER DZ DIGRAPH (`U+02A3`) ... LATIN SMALL LETTER LZ DIGRAPH (`U+02AB`).
+  - MODIFIER LETTER SMALL W (`U+02B7`).
+  - GREEK SMALL LETTER OMEGA (`U+03C9`).
+  - GREEK SMALL LETTER OMEGA WITH TONOS (`U+03CE`).
+  - GREEK PI SYMBOL (`U+03D6`).
+  - CYRILLIC CAPITAL LETTER LJE (`U+0409`) ... CYRILLIC CAPITAL LETTER NJE (`U+040A`).
+  - CYRILLIC CAPITAL LETTER ZHE (`U+0416`).
+  - CYRILLIC CAPITAL LETTER EF (`U+0424`).
+  - CYRILLIC CAPITAL LETTER SHA (`U+0428`) ... CYRILLIC CAPITAL LETTER SHCHA (`U+0429`).
+  - CYRILLIC SMALL LETTER ZHE (`U+0436`).
+  - CYRILLIC SMALL LETTER EF (`U+0444`).
+  - CYRILLIC SMALL LETTER SHA (`U+0448`) ... CYRILLIC SMALL LETTER SHCHA (`U+0449`).
+  - CYRILLIC SMALL LETTER LJE (`U+0459`) ... CYRILLIC SMALL LETTER NJE (`U+045A`).
+  - CYRILLIC CAPITAL LETTER OMEGA (`U+0460`) ... CYRILLIC SMALL LETTER OMEGA (`U+0461`).
+  - CYRILLIC CAPITAL LETTER OMEGA WITH TITLO (`U+047C`) ... CYRILLIC SMALL LETTER OT (`U+047F`).
+  - CYRILLIC CAPITAL LETTER ZHE WITH DESCENDER (`U+0496`) ... CYRILLIC SMALL LETTER ZHE WITH DESCENDER (`U+0497`).
+  - CYRILLIC CAPITAL LETTER PE WITH MIDDLE HOOK (`U+04A6`) ... CYRILLIC SMALL LETTER PE WITH MIDDLE HOOK (`U+04A7`).
+  - CYRILLIC CAPITAL LETTER ZHE WITH BREVE (`U+04C1`) ... CYRILLIC SMALL LETTER ZHE WITH BREVE (`U+04C2`).
+  - CYRILLIC CAPITAL LIGATURE A IE (`U+04D4`) ... CYRILLIC SMALL LIGATURE A IE (`U+04D5`).
+  - CYRILLIC CAPITAL LETTER ZHE WITH DIAERESIS (`U+04DC`) ... CYRILLIC SMALL LETTER ZHE WITH DIAERESIS (`U+04DD`).
+  - CYRILLIC CAPITAL LETTER KOMI DJE (`U+0502`) ... CYRILLIC SMALL LETTER KOMI ZJE (`U+0505`).
+  - CYRILLIC CAPITAL LETTER KOMI LJE (`U+0508`) ... CYRILLIC SMALL LETTER KOMI NJE (`U+050B`).
+  - CYRILLIC CAPITAL LETTER YAE (`U+0518`) ... CYRILLIC SMALL LETTER YAE (`U+0519`).
+  - CYRILLIC CAPITAL LETTER WE (`U+051C`) ... CYRILLIC SMALL LETTER WE (`U+051D`).
+  - CYRILLIC CAPITAL LETTER EL WITH MIDDLE HOOK (`U+0520`) ... CYRILLIC SMALL LETTER EN WITH MIDDLE HOOK (`U+0523`).
+  - CYRILLIC CAPITAL LETTER DZZHE (`U+052A`) ... CYRILLIC SMALL LETTER DZZHE (`U+052B`).
+  - ARMENIAN CAPITAL LETTER XEH (`U+053D`).
+  - ARMENIAN SMALL LETTER TURNED AYB (`U+0560`) ... ARMENIAN SMALL LETTER AYB (`U+0561`).
+  - ARMENIAN SMALL LETTER XEH (`U+056D`).
+  - ARMENIAN SMALL LETTER PEH (`U+057A`).
+  - ARMENIAN SMALL LETTER TIWN (`U+057F`).
+  - ARMENIAN SMALL LETTER PIWR (`U+0583`).
+  - ARMENIAN SMALL LIGATURE ECH YIWN (`U+0587`).
+  - CYRILLIC SMALL LETTER THREE-LEGGED TE (`U+1C85`).
+  - LATIN SMALL LETTER TURNED AE (`U+1D02`).
+  - LATIN SMALL LETTER TURNED OE (`U+1D14`).
+  - MODIFIER LETTER CAPITAL AE (`U+1D2D`).
+  - MODIFIER LETTER CAPITAL W (`U+1D42`).
+  - MODIFIER LETTER SMALL TURNED AE (`U+1D46`).
+  - MODIFIER LETTER SMALL M (`U+1D50`).
+  - MODIFIER LETTER SMALL TURNED M (`U+015A`).
+  - LATIN SMALL LETTER UE (`U+016B`).
+  - LATIN SMALL LETTER M WITH MIDDLE TILDE (`U+1D6F`).
+  - LATIN SMALL LETTER M WITH PALATAL HOOK (`U+1D86`).
+  - MODIFIER LETTER SMALL M WITH HOOK (`U+1DAC`) ... MODIFIER LETTER SMALL TURNED M WITH LONG LEG (`U+1DAD`).
+  - LATIN SMALL LETTER M WITH ACUTE (`U+1E3F`).
+  - LATIN SMALL LETTER M WITH DOT ABOVE (`U+1E41`).
+  - LATIN SMALL LETTER M WITH DOT BELOW (`U+1E43`).
+  - LATIN CAPITAL LETTER W WITH GRAVE (`U+1E80`) ... LATIN SMALL LETTER W WITH DOT BELOW (`U+1E89`).
+  - LATIN SMALL LETTER W WITH RING ABOVE (`U+1E98`).
+  - GREEK SMALL LETTER OMEGA WITH PSILI (`U+1F60`) ... GREEK SMALL LETTER OMEGA WITH DASIA AND PERISPOMENI (`U+1F67`).
+  - GREEK SMALL LETTER OMEGA WITH VARIA (`U+1F7C`) ... GREEK SMALL LETTER OMEGA WITH OXIA (`U+1F7D`).
+  - GREEK SMALL LETTER OMEGA WITH PSILI AND YPOGEGRAMMENI (`U+1FA0`) ... GREEK SMALL LETTER OMEGA WITH DASIA AND PERISPOMENI AND YPOGEGRAMMENI (`U+1FA7`).
+  - GREEK SMALL LETTER OMEGA WITH VARIA AND YPOGEGRAMMENI (`U+1FF2`) ... GREEK SMALL LETTER OMEGA WITH OXIA AND YPOGEGRAMMENI (`U+1FF4`).
+  - GREEK SMALL LETTER OMEGA WITH PERISPOMENI (`U+1FF6`) ... GREEK SMALL LETTER OMEGA WITH PERISPOMENI AND YPOGEGRAMMENI (`U+1FF7`).
+  - LATIN SUBSCRIPT SMALL LETTER M (`U+2098`).
+  - MILL SIGN (`U+20A5`).
+  - WON SIGN (`U+20A9`).
+  - SMALL ROMAN NUMERAL ONE THOUSAND (`U+217F`) ... ROMAN NUMERAL ONE THOUSAND C D (`U+2180`).
+  - ROMAN NUMERAL TEN THOUSAND (`U+2182`).
+  - ROMAN NUMERAL ONE HUNDRED THOUSAND (`U+2188`).
+  - VERY MUCH LESS-THAN (`U+22D8`) ... VERY MUCH GREATER-THAN (`U+22D9`).
+  - LEFT AND RIGHT DOUBLE TURNSTILE (`U+27DA`) ... LEFT AND RIGHT TACK (`U+27DB`).
+  - SHUFFLE PRODUCT (`U+29E2`).
+  - LATIN CAPITAL LETTER W WITH HOOK (`U+2C72`) ... LATIN SMALL LETTER W WITH HOOK (`U+2C73`).
+  - CYRILLIC CAPITAL LETTER BROAD OMEGA (`U+A64C`) ... CYRILLIC SMALL LETTER BROAD OMEGA (`U+A64D`).
+  - CYRILLIC CAPITAL LETTER DOUBLE MONOCULAR O (`U+A66C`) ... CYRILLIC LETTER MULTIOCULAR O (`U+A66E`).
+  - CYRILLIC CAPITAL LETTER ZHWE (`U+A684`) ... CYRILLIC SMALL LETTER CCHE (`U+A687`).
+  - CYRILLIC CAPITAL LETTER DOUBLE O (`U+A698`) ... CYRILLIC SMALL LETTER DOUBLE O (`U+A699`).
+  - LATIN CAPITAL LETTER AA (`U+A732`) ... LATIN SMALL LETTER AU (`U+A737`).
+  - LATIN CAPITAL LETTER OO (`U+A74E`) ... LATIN SMALL LETTER OO (`U+A74F`).
+  - LATIN CAPITAL LETTER OMEGA (`U+A7B6`) ... LATIN SMALL LETTER OMEGA (`U+A7B7`).
+  - MODIFIER LETTER SMALL LIGATURE OE (`U+A7F9`) ... LATIN SMALL CAPITAL LETTER TURNED M (`U+A7FA`).
+  - LATIN EPIGRAPHIC LETTER ARCHAIC M (`U+A7FF`).
+  - LATIN SMALL LETTER A REVERSED SCHWA (`U+AB31`).
+  - LATIN SMALL LETTER M WITH CROSSED-TAIL (`U+AB3A`).
+  - LATIN SMALL LETTER INVERTED OE (`U+AB40`) ... LATIN SMALL LETTER TURNED OE WITH HORIZONTAL STROKE (`U+AB42`).
+  - LATIN SMALL LETTER SAKHA YAT (`U+AB60`).
+  - LATIN SMALL LETTER UO (`U+AB63`).
+  - LATIN SMALL LETTER DZ DIGRAPH WITH RETROFLEX HOOK (`U+AB66`) ... LATIN SMALL LETTER TS DIGRAPH WITH RETROFLEX HOOK (`U+AB67`).
+  - MODIFIER LETTER TURNED W (`U+AB69`).
+  - LATIN SMALL LIGATURE FFI (`U+FB03`) ... LATIN SMALL LIGATURE ST (`U+FB06`).
+  - MODIFIER LETTER SMALL AE (`U+10783`).
+  - MODIFIER LETTER SMALL CLOSED OMEGA (`U+107A4`).
+  - LATIN SMALL LETTER DEZH DIGRAPH WITH PALATAL HOOK (`U+1DF12`).
+  - LATIN SMALL LETTER TESH DIGRAPH WITH PALATAL HOOK (`U+1DF17`).
+  - MODIFIER LETTER CYRILLIC SMALL ZHE (`U+1E036`).
+  - MODIFIER LETTER CYRILLIC SMALL EF (`U+1E042`).
+  - MODIFIER LETTER CYRILLIC SMALL SHA (`U+1E046`).
+  - CYRILLIC SUBSCRIPT SMALL LETTER ZHE (`U+1E057`).
+  - CYRILLIC SUBSCRIPT SMALL LETTER EF (`U+1E060`).
+  - CYRILLIC SUBSCRIPT SMALL LETTER SHA (`U+1E064`).
 * Add characters:
   - DOUBLE INTERSECTION (`U+22D2`).
   - DOUBLE UNION (`U+22D3`).
